force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/IDENTITY_Registration_Form_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IDENTITY - Registration Form</label>
</CustomObject>