force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Default_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Code__c</fullName>
    <label>Default Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>