force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Default_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_To_Email_Address__c</fullName>
    <label>Default To Email Address</label>
    <type>TextArea</type>
</CustomField>