force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Default_To_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Default_To_Mobile_Phone__c</fullName>
    <label>Default To Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>