force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Email_Template_Image__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Image__c</fullName>
    <description>image for verification code email template</description>
    <label>Email_Template_Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>