force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Is_Developper_Mode_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Developper_Mode_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Developper Mode Available</label>
    <type>Checkbox</type>
</CustomField>