force-app/main/default/objects/IDENTITY_Registration_Form_Settings__c/fields/Sent_Email_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sent_Email_Limit__c</fullName>
    <label>Sent Email Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>